--- a/.project
+++ b/.project
@@ -30,5 +30,10 @@
 			<type>1</type>
 			<locationURI>PARENT-4-PROJECT_LOC/Programacion/Proyecto_PrograIII-main/Proyecto_PrograIII-main/FinalDeustock1/src/cuenta.png</locationURI>
 		</link>
+		<link>
+			<name>ComicShopDeusto/src/libro.png</name>
+			<type>1</type>
+			<locationURI>PARENT-4-PROJECT_LOC/3%C2%BA%20Curso/1%C2%BA%20Cuatri/Programacion%203/Proyecto/libro.png</locationURI>
+		</link>
 	</linkedResources>
 </projectDescription>
